Bug 279161 - Since update to 4.7 Kwallet gui reacts very slow on start
Summary: Since update to 4.7 Kwallet gui reacts very slow on start
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Leupold
URL:
Keywords:
: 284671 305943 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-02 11:21 UTC by m.wege
Modified: 2012-08-28 22:37 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2011-08-02 11:21:02 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

Since update to 4.7 kwallet feed list is sometimes very, very slow on start. It takes up to a minute until the gui reacts the first time and I can actually click on something. The very similiar problem also happens with Akregator. May be due to removal of qt3-support?

Reproducible: Always

Steps to Reproduce:
start Kwallet, open a Wallet, klick on something

Actual Results:  
now reaction for up until a minute

Expected Results:  
gui should react instantly 

OS: Linux (x86_64) release 3.0.0-7-generic
Compiler: gcc
Comment 1 Mark Jaroski 2011-10-05 20:18:49 UTC
I have exactly the same behaviour on both of my Ubuntu Natty machines.
Comment 2 Daniel Ellermann 2012-02-22 15:09:16 UTC
I can confirm this behaviour, too. When I open a wallet the window with the passwords appears but it takes approx. 30-60 s until the window reacts. In this time I cannot expand any entry in the tree. This behaviour is reproduceable each time I open a wallet.
Comment 3 Martin Koller 2012-07-20 21:22:46 UTC
Can you tell us how many entries there are in the folders you have ?
I see a similar problem and I have the main reason is > 340 entries in "Form Data".
Comment 4 m.wege 2012-07-20 21:56:04 UTC
I have about 1400 entries.
Comment 5 Martin Koller 2012-07-20 21:58:38 UTC
That explains it. I already have created a patch with which the problem should be solved.
https://git.reviewboard.kde.org/r/105633/
Comment 6 David Faure 2012-08-13 17:57:25 UTC
Git commit 0470195d23d46d05c0b4b0c87255c7a854a72270 by David Faure.
Committed on 13/08/2012 at 19:48.
Pushed by dfaure into branch 'master'.

Fix amazingly slow kwalletmanager startup.

Every call to setFlags(), on item creation, triggers itemChanged(), which the
code wrongly treated as a renaming, so it would make a dbus call for renaming,
and then process the dbus signal for "this folder has changed" by reloading the
folder and comparing.

I didn't see review 105633 before spending time fixing this :-(

M  +16   -3    allyourbase.cpp
M  +6    -5    allyourbase.h
M  +10   -7    kwalleteditor.cpp
M  +1    -1    kwalleteditor.h

http://commits.kde.org/kwallet/0470195d23d46d05c0b4b0c87255c7a854a72270
Comment 7 David Faure 2012-08-13 17:57:49 UTC
Git commit e893896200ad352be8d4110f780333f888b0fb94 by David Faure.
Committed on 13/08/2012 at 19:48.
Pushed by dfaure into branch 'KDE/4.9'.

Fix amazingly slow kwalletmanager startup.

Every call to setFlags(), on item creation, triggers itemChanged(), which the
code wrongly treated as a renaming, so it would make a dbus call for renaming,
and then process the dbus signal for "this folder has changed" by reloading the
folder and comparing.

I didn't see review 105633 before spending time fixing this :-(
(cherry picked from commit 0470195d23d46d05c0b4b0c87255c7a854a72270)

M  +16   -3    allyourbase.cpp
M  +6    -5    allyourbase.h
M  +10   -7    kwalleteditor.cpp
M  +1    -1    kwalleteditor.h

http://commits.kde.org/kwallet/e893896200ad352be8d4110f780333f888b0fb94
Comment 8 m.wege 2012-08-13 19:33:14 UTC
You are my hero. This has been anoying me for quite a time. Nice to hear it soon will be over.
Comment 9 Martin Koller 2012-08-16 05:54:30 UTC
*** Bug 284671 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2012-08-28 22:37:53 UTC
*** Bug 305943 has been marked as a duplicate of this bug. ***