Fix amazingly slow kwalletmanager startup.

Every call to setFlags(), on item creation, triggers itemChanged(), which the
code wrongly treated as a renaming, so it would make a dbus call for renaming,
and then process the dbus signal for "this folder has changed" by reloading the
folder and comparing.

BUG: 279161

I didn't see review 105633 before spending time fixing this :-(
(cherry picked from commit 0470195d23d46d05c0b4b0c87255c7a854a72270)